--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
             varying vec3 vColor;
 
+            varying vec2 vTextureCoord;
+
+            uniform sampler2D uSampler;
+
             void main(void) {
                 gl_FragColor = vec4(vColor, 1.0);
             }
@@ -16,10 +20,14 @@
             attribute float aVertexPositionX;
             attribute float aVertexPositionY;
 
+            attribute vec2 aTextureCoord;
+
             uniform mat4 uMVMatrix;
             uniform mat4 uPMatrix;
 
             varying vec3 vColor;
+
+            varying vec2 vTextureCoord;
 
             void main(void) {
                 gl_Position = uPMatrix * uMVMatrix * vec4(
@@ -37,6 +45,8 @@
                     1.0 * yOffset,
                     0.0 + xOffset
                 );
+
+                vTextureCoord = aTextureCoord;
             }
         </script>
         
