--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
     <head>
         <title></title>
 
-        <script id="shader-fs" type="x-shader/x-fragment">
+        <script id="main-fs" type="x-shader/x-fragment">
             precision mediump float;
 
             varying vec3 vColor;
-
-            varying vec2 vTextureCoord;
-
-            uniform sampler2D uSampler;
 
             void main(void) {
                 gl_FragColor = vec4(vColor, 1.0);
             }
         </script>
 
-        <script id="shader-vs" type="x-shader/x-vertex">
+        <script id="main-vs" type="x-shader/x-vertex">
             attribute float aVertexPositionX;
             attribute float aVertexPositionY;
-
-            attribute vec2 aTextureCoord;
 
             uniform mat4 uMVMatrix;
             uniform mat4 uPMatrix;
 
             varying vec3 vColor;
-
-            varying vec2 vTextureCoord;
 
             void main(void) {
                 gl_Position = uPMatrix * uMVMatrix * vec4(
@@ -45,7 +37,39 @@
                     1.0 * yOffset,
                     0.0 + xOffset
                 );
+            }
+        </script>
 
+        <script id="texture-fs" type="x-shader/x-fragment">
+            precision mediump float;
+
+            varying vec2 vTextureCoord;
+
+            uniform sampler2D uSampler;
+
+            void main(void) {
+                gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+            }
+        </script>
+
+        <script id="texture-vs" type="x-shader/x-vertex">
+            attribute float aVertexPositionX;
+            attribute float aVertexPositionY;
+            attribute vec2 aTextureCoord;
+
+            uniform mat4 uMVMatrix;
+            uniform mat4 uPMatrix;
+
+            varying vec2 vTextureCoord;
+
+            void main(void) {
+                gl_Position = uPMatrix * uMVMatrix * vec4(
+                    aVertexPositionX,
+                    aVertexPositionY,
+                    0.0,
+                    1.0
+                );
+                
                 vTextureCoord = aTextureCoord;
             }
         </script>
