Step 1 migrating to vue (doesn't work)

--- a/src/plugins/webgl/index.html
+++ b/src/plugins/webgl/index.html
@@ -80,7 +80,8 @@
                 opacity = 1.0 - (aVertexPositionY / 33.0);
             }
         </script>
-        
+        <!--script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script-->
+
         <script data-main="Main" src="lib/require.js"></script>
 
         <style>
